Bug 1161978 - Use GetEffectiveVisibleRegion() for Layer invalidation r=matt.woodrow